--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -19,4 +19,13 @@
         android:layout_alignParentBottom="true"
         android:layout_margin="15dp"
         android:text="Logout" />
+
+    <Button
+        android:id="@+id/btnMoisture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Moisture"
+        android:textAlignment="center" />
+
+
 </RelativeLayout>
