--- a/app/src/main/res/layout/activity_moisture.xml
+++ b/app/src/main/res/layout/activity_moisture.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context="com.agrisave.agrim8iot.MoistureActivity"
+    >
+
+
+    <WebView
+        android:layout_width="345dp"
+        android:layout_height="318dp"
+        android:layout_weight="1"
+        android:id="@+id/webView"  />
 
 </LinearLayout>
